chore: Fixed the major errors in portfolio hisotry service